syntax = "proto3";

import "qroma-types.proto";

message SetLogLevel {
  Qroma_LogLevel logLevel = 1;
}


message QromaCommConfigCommand {
  oneof command {
    SetLogLevel setLogLevel = 1;
  }
}
